# stonemite

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  installer.iss  justfile
app/: Cargo.toml  build.rs
app/src/: auto_type.rs  broadcast.rs  character_cache.rs  class_icons.rs  config.rs  crypt.rs  eq_characters.rs  eq_windows.rs  log_watcher.rs  main.rs  overlay.rs  settings_dialog.rs  telemetry.rs  tray.rs  trusik_deploy.rs  trusik_shm.rs  updater.rs
config/: example.toml
trusik/: Cargo.toml  README.md
trusik/src/: device_proxy.rs  di8_proxy.rs  iat_hook.rs  kbd_patch.rs  key_shm.rs  lib.rs  log.rs  login_input.rs  shm.rs
