[package]
name = "stonemite"
version = "0.3.0"
edition = "2021"

[build-dependencies]
winres = "0.1"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self_update = { version = "0.42", features = ["archive-zip", "compression-zip-deflate"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4"] }
eframe = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_HiDpi",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
]
