[package]
name = "trusik"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "dinput8"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_UI_Input_KeyboardAndMouse",
]
